# ExampleTelegramBot

./: .env example  docker-compose.yaml  dockerfile  pyproject.toml  run.py
src/: schemas.py
src/database/migrations/: env.py
src/database/migrations/versions/: 0d030162b74e_example_of_migrations.py
src/database/models/: example_database_module.py
src/handlers/: start.py
src/utils/: filter.py
src/utils/keyboard/: admin.py  user.py
